--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
         <p class="header-p">HOME</p>
         <p class="header-logo">SKULL BANK</p>
     </header>
-    <div class="block">
+
+
+    <!-- <div class="but">
+        <button id="color" class="color">COLOR</button>
+    </div> -->
+
+
+    <div id="block" class="block">
         <img class="photo-card" src="bra.jpg" alt="">
         <div class="block_title">
             <p class="block_text">Credit Card</p>
@@ -83,6 +90,7 @@
                     захист персональної інформації користувачів. Ця політика конфіденційності надається для забезпечення
                     розуміння того, як ми обробляємо вашу інформацію. Дякуємо за довіру та використання наших послуг.
                 </p>
+                <button class="xrest"><img src="хрестик.png" alt=""></button>
             </div>
             <input class="forma-input" type="checkbox" id="dog">
         </div>
