--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
 
     <div id="block" class="block">
-        <img class="photo-card" src="bra.jpg" alt="">
+        <img class="photo-card" src="./bra.jpg" alt="">
         <div class="block_title">
             <p class="block_text">Credit Card</p>
             <p class="block_text">SKULL BANK</p>
         </div>
-        <img class="block_photo" src="card.png" alt="">
+        <img class="block_photo" src="./card.png" alt="">
         <p class="card_number"></p>
         <div class="card_container">
             <p class="card_cv"></p>
@@ -90,7 +90,7 @@
                     захист персональної інформації користувачів. Ця політика конфіденційності надається для забезпечення
                     розуміння того, як ми обробляємо вашу інформацію. Дякуємо за довіру та використання наших послуг.
                 </p>
-                <button class="xrest"><img src="хрестик.png" alt=""></button>
+                <button class="xrest"><img src="./хрестик.png" alt=""></button>
             </div>
             <input class="forma-input" type="checkbox" id="dog">
         </div>
