--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
         <p class="header-p">CREDIT</p>
         <p class="header-p">HOME</p>
         <p class="header-logo">SKULL BANK</p>
+        <p class="header-text">SKULL BANK - Банк, у якому все неможливе - стає реальним.</p>
     </header>
-
-
-    <!-- <div class="but">
-        <button id="color" class="color">COLOR</button>
-    </div> -->
 
 
     <div id="block" class="block">
         <img class="photo-card" src="./bra.jpg" alt="">
         <div class="block_title">
-            <p class="block_text">Credit Card</p>
+            <p class="block_text">Universal Card</p>
             <p class="block_text">SKULL BANK</p>
         </div>
         <img class="block_photo" src="./card.png" alt="">
