додам фото та інше

--- a/index.html
+++ b/index.html
@@ -10,14 +10,32 @@
 </head>
 
 <body>
-    <form class="form" action="">
-        <h1 class="h1">Login</h1>
-        <input placeholder="Your Name" type="name" class="name">
-        <input placeholder="Your Email" type="email" class="email">
-        <input placeholder="Your Password" type="password" class="password">
-        <input type="checkbox">
-        <button class="button">Click</button>
-    </form>
+    <div class="cont">
+        <img class="img" src="bra.jpg" alt="">
+        <form class="form" action="">
+            <h1 class="h1">Login</h1>
+            <div class="form-box1">
+                <img src="User.png" alt="">
+                <input placeholder="Your Name" type="name" class="name">
+            </div>
+            <div class="form-box2">
+                <img src="mail.png" alt="">
+                <input placeholder="Your Email" type="email" class="email">
+            </div>
+            <div class="form-box3">
+                <img class="zam" src="замок.png" alt="">
+                <input placeholder="Your Password" type="password" class="password">
+            </div>
+            <input type="checkbox">
+            <button class="button">Click</button>
+        </form>
+    </div>
+
+
+
+
+
+
     <script src="./login.js"></script>
 </body>
 
