редагування js-коду

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
                 <img class="zam" src="замок.png" alt="">
                 <input placeholder="Your Password" type="password" class="password">
             </div>
-            <input type="checkbox">
-            <button class="button">Click</button>
+            <div class="form-box4">
+                <img src="tel.png" alt="">
+                <input placeholder="Your Phone" type="phone" class="tel">
+            </div>
+            <div class="form-box5">
+                <p>Я погоджуюсь з умовами користування.</p>
+                <input class="input-checkbox" type="checkbox">
+            </div>
+            <button type="button" class="button">Реєстрація</button>
         </form>
     </div>
 
