--- a/nologin.html
+++ b/nologin.html
@@ -23,6 +23,7 @@
         <p class="header-p">CREDIT</p>
         <p class="header-p">HOME</p>
         <p class="header-logo">SKULL BANK</p>
+        <img class="header-img" src="bra.jpg" alt="">
         <p class="header-text">SKULL BANK - Банк, у якому все неможливе - стає реальним.</p>
     </header>
 
@@ -47,30 +48,25 @@
     <div class="input0">
         <div class="bt bt-number">
             <label class="label" for="">Get Card Number</label>
-            <!-- <input class="input1" type="text"> -->
             <button class="button button-number">GET</button>
         </div>
         <div class="bt-cv-year">
             <div class="bt bt-cv">
                 <label class="label" for="">Get Card cv-code</label>
-                <!-- <input class="input2" type="text"> -->
                 <button class="button button-cv">GET</button>
             </div>
             <div class="bt bt-year">
                 <label class="label" for="">Date Received</label>
                 <input class="date" type="date">
-                <!-- <button class="button button-year">GET</button> -->
             </div>
         </div>
         <div class="bt bt-name">
             <label class="label" for="">Enter Name</label>
             <input class="input-name" type="text">
-            <!-- <button class="button button-name">CLICK</button> -->
         </div>
         <div class="bt bt-surname">
             <label class="label" for="">Enter Surname</label>
             <input class="input-surname" type="text">
-            <!-- <button class=" button button-surname">CLICK</button> -->
         </div>
         <div class="forma">
             <label for="dog" class="forma-label">
