add new function

--- a/index.html
+++ b/index.html
@@ -5,40 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-form</title>
-    <link rel="stylesheet" href="./login.css">
-    <link rel="shortcut icon" href="login.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" href="./login.jpg" type="image/x-icon">
 </head>
 
 <body>
     <div class="cont">
-        <img class="img" src="bra.jpg" alt="">
+        <img class="img" src="./bra.jpg" alt="">
         <form class="form" action="">
             <h1 class="h1">Login</h1>
             <div class="form-box1">
                 <img src="User.png" alt="">
-                <input placeholder="Your Name" type="text" class="name">
+                <input placeholder="Your Name Surname" type="text" class="name">
                 <div class="form-box1-modal">
+                    <img src="./User.png" alt="">
                     <p>Введіть ім'я</p>
                 </div>
             </div>
             <div class="form-box2">
-                <img src="mail.png" alt="">
+                <img src="./mail.png" alt="">
                 <input placeholder="Your Email" type="email" class="email">
                 <div class="form-box2-modal">
+                    <img src="./mail.png" alt="">
                     <p>Невірний формат електронної адреси.</p>
                 </div>
             </div>
             <div class="form-box3">
-                <img class="zam" src="замок.png" alt="">
+                <img class="zam" src="./замок.png" alt="">
                 <input placeholder="Your Password" type="password" class="password">
                 <div class="form-box3-modal">
+                    <img class="zamok" src="./замок.png" alt="">
                     <p>Пароль повинен складатись що найменше з 7 символів.</p>
                 </div>
             </div>
             <div class="form-box4">
-                <img src="tel.png" alt="">
+                <img src="./tel.png" alt="">
                 <input placeholder="Your Phone" type="tel" class="phone">
                 <div class="form-box4-modal">
+                    <img src="./tel.png" alt="">
                     <p>Номер телефону повинен мати 13 символів та +.</p>
                 </div>
             </div>
@@ -58,7 +62,7 @@
 
 
 
-    <script src="./login.js"></script>
+    <script src="./index.js"></script>
     <script src="./skr.js"></script>
 </body>
 
