--- a/nologin.html
+++ b/nologin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank Kard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./nologin.css">
     <link rel="shortcut icon" href="./icon-cash.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +23,7 @@
         <p class="header-p">CREDIT</p>
         <p class="header-p">HOME</p>
         <p class="header-logo">SKULL BANK</p>
+        <p id="header-name" class="header-name"></p>
         <img class="header-img" src="bra.jpg" alt="">
         <p class="header-text">SKULL BANK - Банк, у якому все неможливе - стає реальним.</p>
     </header>
@@ -88,7 +89,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./nologin.js"></script>
 </body>
 
 </html>
