--- a/nologin.html
+++ b/nologin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank Kard</title>
     <link rel="stylesheet" href="./nologin.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="shortcut icon" href="./icon-cash.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <p class="header-p">NEW CARD</p>
         <p class="header-p">CREDIT</p>
         <p class="header-p">HOME</p>
@@ -72,9 +73,9 @@
         <div class="forma">
             <label for="dog" class="forma-label">
                 Користуючись цим веб-сайтом, ви підтверджуєте, що ознайомились з нашою <span
-                    class="text-about">Політикою конфіденційності</span> та
+                    class="text-about">Політикою конфіденційності.</span><!-- та
                 погоджуєтеся з умовами обробки вашої особистої інформації, як написано у цьому документі. Якщо ви не
-                погоджуєтесь, будь ласка, не продовжуйте користуватися цим веб-сайтом.
+                погоджуєтесь, будь ласка, не продовжуйте користуватися цим веб-сайтом. -->
                 <br>
                 Я ознайомився(-лась).
             </label>
