--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-form</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="media2.css">
     <link rel="shortcut icon" href="./login.jpg" type="image/x-icon">
 </head>
 
