--- a/nologin.html
+++ b/nologin.html
@@ -20,11 +20,15 @@
 
 <body>
     <header class="header">
-        <p class="header-p">NEW CARD</p>
-        <p class="header-p">CREDIT</p>
-        <p class="header-p">HOME</p>
-        <p class="header-logo">SKULL BANK</p>
-        <p id="header-name" class="header-name"></p>
+        <div class="headerr">
+            <p class="header-p">NEW CARD</p>
+            <p class="header-p">CREDIT</p>
+            <p class="header-p">HOME</p>
+        </div>
+        <div class="headerr2">
+            <p class="header-logo">SKULL BANK</p>
+            <p id="header-name" class="header-name"></p>
+        </div>
         <img class="header-img" src="bra.jpg" alt="">
         <p class="header-text">SKULL BANK - Банк, у якому все неможливе - стає реальним.</p>
     </header>
@@ -80,9 +84,9 @@
                 Я ознайомився(-лась).
             </label>
             <div class="chek-modal">
-                <p>Дякуємо за використання наших послуг. Наша компанія зобов'язана забезпечити конфіденційність та
+                <p>Наша компанія зобов'язана забезпечити конфіденційність та
                     захист персональної інформації користувачів. Ця політика конфіденційності надається для забезпечення
-                    розуміння того, як ми обробляємо вашу інформацію. Дякуємо за довіру та використання наших послуг.
+                    розуміння того, як ми обробляємо вашу інформацію.
                 </p>
                 <button class="xrest"><img src="./хрестик.png" alt=""></button>
             </div>
